# ValueTrainerQt

./: CMakeLists.txt  Main.qml  appmanager.cpp  appmanager.h  colorhandler.cpp  colorhandler.h  main.cpp  sessionhandler.cpp  sessionhandler.h  sessionparameters.cpp  sessionparameters.h
ui/: AnswerScreen.qml  CheckButton.qml  MenuButton.qml  MenuScreen.qml  QuestionScreen.qml  Swatch.qml
